fix homepage alignment

--- a/src/components/homepage/Header/index.css
+++ b/src/components/homepage/Header/index.css
@@ -1,5 +1,4 @@
 .headerRow {
-  width: 100vw;
   height: 80vh;
   color: white;
   text-align: center;
