--- a/src/container/HomePage/index.css
+++ b/src/container/HomePage/index.css
@@ -1,4 +1,7 @@
-.homePageRow {
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+.homePageCol {
+  /* background: RGBA(90, 96, 113, 0.09); */
+  padding-top: 3%;
+  margin-bottom: 3%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
